--- a/wowslider-howto.html
+++ b/wowslider-howto.html
@@ -6,8 +6,8 @@
 	<meta name="description" content="WOWSlider" />
 	
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
-	<script type="text/javascript" src="engine1/jquery.js"></script>
+	<link rel="stylesheet" type="text/css" href="engine2/style.css" />
+	<script type="text/javascript" src="engine2/jquery.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
 
 
@@ -104,40 +104,36 @@
 <br>
 
 <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-<div id="wowslider-container1">
+<div id="wowslider-container2">
 <div class="ws_images"><ul>
-		<li><img src="data1/images/arquitectura5.jpg" alt="arquitectura5" title="arquitectura5" id="wows1_0"/></li>
-		<li><img src="data1/images/bio.jpg" alt="bio" title="bio" id="wows1_1"/></li>
-		<li><img src="data1/images/bio2.jpg" alt="bio2" title="bio2" id="wows1_2"/></li>
-		<li><img src="data1/images/derecho3.jpg" alt="Derecho3" title="Derecho3" id="wows1_3"/></li>
-		<li><img src="data1/images/derecho7.jpg" alt="derecho7" title="derecho7" id="wows1_4"/></li>
-		<li><img src="data1/images/diseo4.jpg" alt="diseño4" title="diseño4" id="wows1_5"/></li>
-		<li><img src="data1/images/diseo5.png" alt="diseño5" title="diseño5" id="wows1_6"/></li>
-		<li><img src="data1/images/diseo6.png" alt="diseño6" title="diseño6" id="wows1_7"/></li>
-		<li><a href="http://wowslider.com"><img src="data1/images/diseo8.jpg" alt="wow slider" title="diseño8" id="wows1_8"/></a></li>
-		<li><img src="data1/images/diseo12.jpg" alt="diseño12" title="diseño12" id="wows1_9"/></li>
+		<li><img src="data2/images/arquitectura5.jpg" alt="arquitectura5" title="arquitectura5" id="wows2_0"/></li>
+		<li><img src="data2/images/derecho3.jpg" alt="Derecho3" title="Derecho3" id="wows2_1"/></li>
+		<li><img src="data2/images/derecho7.jpg" alt="derecho7" title="derecho7" id="wows2_2"/></li>
+		<li><img src="data2/images/diseo1.jpg" alt="diseo1" title="diseo1" id="wows2_3"/></li>
+		<li><img src="data2/images/diseo8.jpg" alt="diseo8" title="diseo8" id="wows2_4"/></li>
+		<li><img src="data2/images/diseo9.jpg" alt="diseo9" title="diseo9" id="wows2_5"/></li>
+		<li><a href="http://wowslider.net"><img src="data2/images/diseo10.jpg" alt="wowslider.net" title="diseo10" id="wows2_6"/></a></li>
+		<li><img src="data2/images/diseo11.jpg" alt="diseo11" title="diseo11" id="wows2_7"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="arquitectura5"><span><img src="data1/tooltips/arquitectura5.jpg" alt="arquitectura5"/>1</span></a>
-		<a href="#" title="bio"><span><img src="data1/tooltips/bio.jpg" alt="bio"/>2</span></a>
-		<a href="#" title="bio2"><span><img src="data1/tooltips/bio2.jpg" alt="bio2"/>3</span></a>
-		<a href="#" title="Derecho3"><span><img src="data1/tooltips/derecho3.jpg" alt="Derecho3"/>4</span></a>
-		<a href="#" title="derecho7"><span><img src="data1/tooltips/derecho7.jpg" alt="derecho7"/>5</span></a>
-		<a href="#" title="diseño4"><span><img src="data1/tooltips/diseo4.jpg" alt="diseño4"/>6</span></a>
-		<a href="#" title="diseño5"><span><img src="data1/tooltips/diseo5.png" alt="diseño5"/>7</span></a>
-		<a href="#" title="diseño6"><span><img src="data1/tooltips/diseo6.png" alt="diseño6"/>8</span></a>
-		<a href="#" title="diseño8"><span><img src="data1/tooltips/diseo8.jpg" alt="diseño8"/>9</span></a>
-		<a href="#" title="diseño12"><span><img src="data1/tooltips/diseo12.jpg" alt="diseño12"/>10</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com">wowslideshow</a> by WOWSlider.com v8.7</div>
+		<a href="#" title="arquitectura5"><span><img src="data2/tooltips/arquitectura5.jpg" alt="arquitectura5"/>1</span></a>
+		<a href="#" title="Derecho3"><span><img src="data2/tooltips/derecho3.jpg" alt="Derecho3"/>2</span></a>
+		<a href="#" title="derecho7"><span><img src="data2/tooltips/derecho7.jpg" alt="derecho7"/>3</span></a>
+		<a href="#" title="diseo1"><span><img src="data2/tooltips/diseo1.jpg" alt="diseo1"/>4</span></a>
+		<a href="#" title="diseo8"><span><img src="data2/tooltips/diseo8.jpg" alt="diseo8"/>5</span></a>
+		<a href="#" title="diseo9"><span><img src="data2/tooltips/diseo9.jpg" alt="diseo9"/>6</span></a>
+		<a href="#" title="diseo10"><span><img src="data2/tooltips/diseo10.jpg" alt="diseo10"/>7</span></a>
+		<a href="#" title="diseo11"><span><img src="data2/tooltips/diseo11.jpg" alt="diseo11"/>8</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com/vi">css slider</a> by WOWSlider.com v8.7</div>
 <div class="ws_shadow"></div>
 </div>	
-<script type="text/javascript" src="engine1/wowslider.js"></script>
-<script type="text/javascript" src="engine1/script.js"></script>
+<script type="text/javascript" src="engine2/wowslider.js"></script>
+<script type="text/javascript" src="engine2/script.js"></script>
 <!-- End WOWSlider.com BODY section -->
 
 
 <div class="instuction">
-	<p class="note">HTML code for the slider <a href="file:///J:/app10/wowslider.html">J:/app10/wowslider.html</a></p>
+	<p class="note">HTML code for the slider <a href="file:///J:/git/app10-git/wowslider.html">J:/git/app10-git/wowslider.html</a></p>
 
 	<h1>
 		How to add this slider to HTML page
@@ -145,49 +141,45 @@
 
 	<h2><span class="num">1</span> Upload these folders to your server</h2>
 	<ul>
-		<li class="mono">data1/</li>
-		<li class="mono">engine1/</li>
-		<li class="note">Current location: <a href="file:///J:/app10">J:/app10</a>. <br>These folders should be located in the same folder as your html page</li>
+		<li class="mono">data2/</li>
+		<li class="mono">engine2/</li>
+		<li class="note">Current location: <a href="file:///J:/git/app10-git">J:/git/app10-git</a>. <br>These folders should be located in the same folder as your html page</li>
 	</ul>
 
 	<h2><span class="num">2</span> Paste this code to your page between the tags <span class="mono">&lt;head&gt;&lt;/head&gt;</span></h2>
 	<textarea onclick="this.select()">&lt;!-- Start WOWSlider.com HEAD section --&gt;
-&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;engine1/style.css&quot; /&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;engine1/jquery.js&quot;&gt;&lt;/script&gt;
+&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;engine2/style.css&quot; /&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;engine2/jquery.js&quot;&gt;&lt;/script&gt;
 &lt;!-- End WOWSlider.com HEAD section --&gt;</textarea>
 
 
 	<h2><span class="num" style="top: -8px;">3</span> Paste this code to your page between the tags <span class="mono">&lt;body&gt;&lt;/body&gt;</span> in the place that you want the slider to appear</h2>
 	<textarea onclick="this.select()" rows="15">&lt;!-- Start WOWSlider.com BODY section --&gt;
-&lt;div id=&quot;wowslider-container1&quot;&gt;
+&lt;div id=&quot;wowslider-container2&quot;&gt;
 &lt;div class=&quot;ws_images&quot;&gt;&lt;ul&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/arquitectura5.jpg&quot; alt=&quot;arquitectura5&quot; title=&quot;arquitectura5&quot; id=&quot;wows1_0&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/bio.jpg&quot; alt=&quot;bio&quot; title=&quot;bio&quot; id=&quot;wows1_1&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/bio2.jpg&quot; alt=&quot;bio2&quot; title=&quot;bio2&quot; id=&quot;wows1_2&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/derecho3.jpg&quot; alt=&quot;Derecho3&quot; title=&quot;Derecho3&quot; id=&quot;wows1_3&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/derecho7.jpg&quot; alt=&quot;derecho7&quot; title=&quot;derecho7&quot; id=&quot;wows1_4&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/diseo4.jpg&quot; alt=&quot;diseño4&quot; title=&quot;diseño4&quot; id=&quot;wows1_5&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/diseo5.png&quot; alt=&quot;diseño5&quot; title=&quot;diseño5&quot; id=&quot;wows1_6&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/diseo6.png&quot; alt=&quot;diseño6&quot; title=&quot;diseño6&quot; id=&quot;wows1_7&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;http://wowslider.com&quot;&gt;&lt;img src=&quot;data1/images/diseo8.jpg&quot; alt=&quot;wow slider&quot; title=&quot;diseño8&quot; id=&quot;wows1_8&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/diseo12.jpg&quot; alt=&quot;diseño12&quot; title=&quot;diseño12&quot; id=&quot;wows1_9&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/arquitectura5.jpg&quot; alt=&quot;arquitectura5&quot; title=&quot;arquitectura5&quot; id=&quot;wows2_0&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/derecho3.jpg&quot; alt=&quot;Derecho3&quot; title=&quot;Derecho3&quot; id=&quot;wows2_1&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/derecho7.jpg&quot; alt=&quot;derecho7&quot; title=&quot;derecho7&quot; id=&quot;wows2_2&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/diseo1.jpg&quot; alt=&quot;diseo1&quot; title=&quot;diseo1&quot; id=&quot;wows2_3&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/diseo8.jpg&quot; alt=&quot;diseo8&quot; title=&quot;diseo8&quot; id=&quot;wows2_4&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/diseo9.jpg&quot; alt=&quot;diseo9&quot; title=&quot;diseo9&quot; id=&quot;wows2_5&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;http://wowslider.net&quot;&gt;&lt;img src=&quot;data2/images/diseo10.jpg&quot; alt=&quot;wowslider.net&quot; title=&quot;diseo10&quot; id=&quot;wows2_6&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/diseo11.jpg&quot; alt=&quot;diseo11&quot; title=&quot;diseo11&quot; id=&quot;wows2_7&quot;/&gt;&lt;/li&gt;
 	&lt;/ul&gt;&lt;/div&gt;
 	&lt;div class=&quot;ws_bullets&quot;&gt;&lt;div&gt;
-		&lt;a href=&quot;#&quot; title=&quot;arquitectura5&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/arquitectura5.jpg&quot; alt=&quot;arquitectura5&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;bio&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/bio.jpg&quot; alt=&quot;bio&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;bio2&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/bio2.jpg&quot; alt=&quot;bio2&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;Derecho3&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/derecho3.jpg&quot; alt=&quot;Derecho3&quot;/&gt;4&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;derecho7&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/derecho7.jpg&quot; alt=&quot;derecho7&quot;/&gt;5&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;diseño4&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/diseo4.jpg&quot; alt=&quot;diseño4&quot;/&gt;6&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;diseño5&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/diseo5.png&quot; alt=&quot;diseño5&quot;/&gt;7&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;diseño6&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/diseo6.png&quot; alt=&quot;diseño6&quot;/&gt;8&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;diseño8&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/diseo8.jpg&quot; alt=&quot;diseño8&quot;/&gt;9&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;diseño12&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/diseo12.jpg&quot; alt=&quot;diseño12&quot;/&gt;10&lt;/span&gt;&lt;/a&gt;
-	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.com&quot;&gt;wowslideshow&lt;/a&gt; by WOWSlider.com v8.7&lt;/div&gt;
+		&lt;a href=&quot;#&quot; title=&quot;arquitectura5&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/arquitectura5.jpg&quot; alt=&quot;arquitectura5&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;Derecho3&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/derecho3.jpg&quot; alt=&quot;Derecho3&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;derecho7&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/derecho7.jpg&quot; alt=&quot;derecho7&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;diseo1&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/diseo1.jpg&quot; alt=&quot;diseo1&quot;/&gt;4&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;diseo8&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/diseo8.jpg&quot; alt=&quot;diseo8&quot;/&gt;5&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;diseo9&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/diseo9.jpg&quot; alt=&quot;diseo9&quot;/&gt;6&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;diseo10&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/diseo10.jpg&quot; alt=&quot;diseo10&quot;/&gt;7&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;diseo11&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/diseo11.jpg&quot; alt=&quot;diseo11&quot;/&gt;8&lt;/span&gt;&lt;/a&gt;
+	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.com/vi&quot;&gt;css slider&lt;/a&gt; by WOWSlider.com v8.7&lt;/div&gt;
 &lt;div class=&quot;ws_shadow&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;	
-&lt;script type=&quot;text/javascript&quot; src=&quot;engine1/wowslider.js&quot;&gt;&lt;/script&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;engine1/script.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;engine2/wowslider.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;engine2/script.js&quot;&gt;&lt;/script&gt;
 &lt;!-- End WOWSlider.com BODY section --&gt;</textarea>
 
 <br><br>
