--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@ function MM_swapImage() { //v3.0
           <div></div>
           </div>
 
-<p><h3>Conoce el proceso de Admision :</h3></p>
+<p><h3>Conoce el proceso de Admisión :</h3></p>
 <div style="width:40%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="b">
 <li class="ui-first-child ui-last-child">
